build: bump required gettext version to 0.19.3
Otherwise:
    configure.ac:86: warning: The 'AM_PROG_MKDIR_P' macro is deprecated, and its use is discouraged.
    configure.ac:86: You should use the Autoconf-provided 'AC_PROG_MKDIR_P' macro instead,
    configure.ac:86: and use '$(MKDIR_P)' instead of '$(mkdir_p)'in your Makefile.am files.

--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,9 @@ Makefile.in
 /m4/wchar_t.m4
 /m4/wint_t.m4
 /m4/xsize.m4
+/m4/extern-inline.m4
+/m4/fcntl-o.m4
+/m4/threadlib.m4
 
 /uml290/uml290mode
 
