build: ignore thuraya helpers test

--- a/.gitignore
+++ b/.gitignore
@@ -164,6 +164,7 @@ Makefile.in
 /plugins/test-modem-helpers-icera*
 /plugins/test-modem-helpers-mbm*
 /plugins/test-modem-helpers-telit*
+/plugins/test-modem-helpers-thuraya*
 /plugins/test-service-*
 
 /test/lsudev
