build: fix missing MMCLI_LIBS variable

--- a/configure.ac
+++ b/configure.ac
@@ -119,7 +119,7 @@ PKG_CHECK_MODULES(MMCLI,
                   gobject-2.0
                   gio-2.0)
 AC_SUBST(MMCLI_CFLAGS)
-AC_SUBST(LIBMM_LIBS)
+AC_SUBST(MMCLI_LIBS)
 
 PKG_CHECK_MODULES(GUDEV, gudev-1.0 >= $GUDEV_MIN_VERSION)
 AC_SUBST(GUDEV_CFLAGS)
