build: use 'no' to disable suspend/resume support, instead of 'none'

--- a/configure.ac
+++ b/configure.ac
@@ -189,11 +189,11 @@ dnl
 AC_ARG_WITH(suspend-resume, AS_HELP_STRING([--with-suspend-resume=no|systemd], [Build ModemManager with specific suspend/resume support]))
 
 if test "x$with_suspend_resume" = "x"; then
-   with_suspend_resume="none"
+   with_suspend_resume="no"
 fi
 
 case $with_suspend_resume in
-    none)
+    no)
         AC_DEFINE(WITH_SUSPEND_RESUME, 0, [Define if you have suspend-resume support])
         ;;
     systemd)
@@ -202,7 +202,7 @@ case $with_suspend_resume in
         AC_DEFINE(WITH_SUSPEND_RESUME, 1, [Define if you have suspend-resume support])
         ;;
     *)
-        AC_MSG_ERROR(--with-suspend-resume must be one of [none, systemd])
+        AC_MSG_ERROR(--with-suspend-resume must be one of [no, systemd])
         ;;
 esac
 
