examples: add SMS sender in python

--- a/configure.ac
+++ b/configure.ac
@@ -375,6 +375,7 @@ cli/Makefile
 examples/Makefile
 examples/modem-watcher-python/Makefile
 examples/modem-watcher-javascript/Makefile
+examples/sms-python/Makefile
 ])
 AC_OUTPUT
 
