broadband-modem/libqcdm: add signal strength from QCDM EVDO Pilot Sets log messages
When a CDMA-only modem is registered with the EVDO network, its not possible to
read signal strength in the following cases:

1) while a data connection is active on single-AT-port modems, because the AT
port is used for PPP and not available for AT+CSQ, AT+CIND or vendor-specific
signal strength commands

2) when the modem reports only CDMA 1x signal strength with AT+CSQ

Now that we have a reasonable interpretation of RSSI from the QCDM
EVDO Pilot Sets V2 log messgae, use that when other means of getting
signal strength aren't available.

--- a/libqcdm/src/Makefile.am
+++ b/libqcdm/src/Makefile.am
@@ -16,6 +16,8 @@ libqcdm_la_SOURCES = \
 	commands.h \
 	errors.c \
 	errors.h \
+	logs.c \
+	logs.h \
 	result.c \
 	result.h \
 	result-private.h \
