ublox: new plugin skeleton

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -852,5 +852,17 @@ test_udev_rules_LDADD = \
 
 
 ################################################################################
+# plugin: u-blox
+################################################################################
+
+pkglib_LTLIBRARIES += libmm-plugin-ublox.la
+libmm_plugin_ublox_la_SOURCES = \
+	ublox/mm-plugin-ublox.c \
+	ublox/mm-plugin-ublox.h \
+	$(NULL)
+libmm_plugin_ublox_la_CPPFLAGS = $(PLUGIN_COMMON_COMPILER_FLAGS)
+libmm_plugin_ublox_la_LDFLAGS  = $(PLUGIN_COMMON_LINKER_FLAGS)
+
+################################################################################
 
 TEST_PROGS += $(noinst_PROGRAMS)
