--- a/cli/Makefile.am
+++ b/cli/Makefile.am
@@ -2,7 +2,6 @@ bin_PROGRAMS = mmcli
 
 mmcli_CPPFLAGS = \
 	$(MMCLI_CFLAGS) \
-        $(GUDEV_CFLAGS) \
 	-I$(top_srcdir) \
 	-I$(top_srcdir)/include \
 	-I$(top_builddir)/include \
@@ -35,10 +34,14 @@ mmcli_SOURCES = \
 	$(NULL)
 
 mmcli_LDADD = \
-        $(GUDEV_LIBS) \
 	$(MMCLI_LIBS) \
 	$(top_builddir)/libmm-glib/libmm-glib.la \
 	$(NULL)
+
+if WITH_UDEV
+mmcli_CPPFLAGS += $(GUDEV_CFLAGS)
+mmcli_LDADD    += $(GUDEV_LIBS)
+endif
 
 completiondir = $(datadir)/bash-completion/completions
 
